--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,8 +1,8 @@
-name: Generate Snake
+name: Generate GitHub Contribution Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Executa todo dia à meia-noite UTC
+    - cron: "0 */12 * * *" # Executa a cada 12 horas
   workflow_dispatch:
   push:
     branches:
@@ -10,24 +10,54 @@ on:
 
 jobs:
   build:
+    name: Generate Snake and Update README
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      # Passo 1: Fazer checkout do repositório
+      - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Passo 2: Gerar Snake SVG, Dark SVG e GIF
       - name: Generate Snake
         uses: Platane/snk@v3
         with:
           github_user_name: Fortunato-Herald
-          outputs: |
-            github-contribution-grid-snake.svg
-            github-contribution-grid-snake-dark.svg?palette=github-dark
+          svg_out_path: dist/github-contribution-grid-snake.svg
+          svg_dark_out_path: dist/github-contribution-grid-snake-dark.svg
+          gif_out_path: dist/github-contribution-grid-snake.gif
 
-      - name: Push Snake to Output Branch
+      # Passo 3: Atualizar README.md com o GIF
+      - name: Update README with GIF
+        run: |
+          README="README.md"
+          GIF_PATH="dist/github-contribution-grid-snake.gif"
+
+          # Remove a linha antiga do GIF (entre <picture> tags)
+          sed -i '/<picture>/,/<\/picture>/d' $README
+
+          # Adiciona novo bloco do GIF no final do README
+          echo -e "\n## 🧩 Contribution Snake\n" >> $README
+          echo '<picture>' >> $README
+          echo "  <source media=\"(prefers-color-scheme: dark)\" srcset=\"dist/github-contribution-grid-snake-dark.svg\" />" >> $README
+          echo "  <source media=\"(prefers-color-scheme: light)\" srcset=\"dist/github-contribution-grid-snake.svg\" />" >> $README
+          echo "  <img alt=\"Snake animation\" src=\"$GIF_PATH\" />" >> $README
+          echo '</picture>' >> $README
+
+      # Passo 4: Commit e push das alterações
+      - name: Commit and Push changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add dist/ README.md
+          git commit -m "Update GitHub Contribution Snake [skip ci]" || echo "No changes to commit"
+          git push origin main
+
+      # Passo 5: Publicar na branch 'output'
+      - name: Deploy to GitHub Pages (Output branch)
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
