--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,63 +1,54 @@
-name: Generate GitHub Contribution Snake
+name: Update GitHub Contribution Snake
 
 on:
   schedule:
-    - cron: "0 */12 * * *" # Executa a cada 12 horas
+    - cron: "0 */12 * * *" # a cada 12h
   workflow_dispatch:
   push:
     branches:
       - main
 
 jobs:
-  build:
-    name: Generate Snake and Update README
+  generate-snake:
     runs-on: ubuntu-latest
 
     steps:
-      # Passo 1: Fazer checkout do repositório
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # 1️⃣ Pegar o repositório
+      - uses: actions/checkout@v3
 
-      # Passo 2: Gerar Snake SVG, Dark SVG e GIF
+      # 2️⃣ Gerar a Snake (SVG claro, SVG dark e GIF)
       - name: Generate Snake
         uses: Platane/snk@v3
         with:
           github_user_name: Fortunato-Herald
-          svg_out_path: dist/github-contribution-grid-snake.svg
-          svg_dark_out_path: dist/github-contribution-grid-snake-dark.svg
-          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: github-contribution-grid-snake.svg
+          svg_dark_out_path: github-contribution-grid-snake-dark.svg
+          gif_out_path: github-contribution-grid-snake.gif
 
-      # Passo 3: Atualizar README.md com o GIF
-      - name: Update README with GIF
+      # 3️⃣ Atualizar o README.md
+      - name: Update README with Snake
         run: |
           README="README.md"
-          GIF_PATH="dist/github-contribution-grid-snake.gif"
+          GIF="github-contribution-grid-snake.gif"
 
-          # Remove a linha antiga do GIF (entre <picture> tags)
-          sed -i '/<picture>/,/<\/picture>/d' $README
+          # Remove bloco antigo da Snake
+          sed -i '/<picture>/,/<\/picture>/d' $README || true
 
-          # Adiciona novo bloco do GIF no final do README
+          # Adiciona novo bloco no final
           echo -e "\n## 🧩 Contribution Snake\n" >> $README
           echo '<picture>' >> $README
-          echo "  <source media=\"(prefers-color-scheme: dark)\" srcset=\"dist/github-contribution-grid-snake-dark.svg\" />" >> $README
-          echo "  <source media=\"(prefers-color-scheme: light)\" srcset=\"dist/github-contribution-grid-snake.svg\" />" >> $README
-          echo "  <img alt=\"Snake animation\" src=\"$GIF_PATH\" />" >> $README
+          echo '  <source media="(prefers-color-scheme: dark)" srcset="github-contribution-grid-snake-dark.svg" />' >> $README
+          echo '  <source media="(prefers-color-scheme: light)" srcset="github-contribution-grid-snake.svg" />' >> $README
+          echo "  <img alt='Snake animation' src='$GIF' />" >> $README
           echo '</picture>' >> $README
 
-      # Passo 4: Commit e push das alterações
-      - name: Commit and Push changes
+      # 4️⃣ Commit e push
+      - name: Commit README and Snake
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add dist/ README.md
+          git add README.md github-contribution-grid-snake.svg github-contribution-grid-snake-dark.svg github-contribution-grid-snake.gif
           git commit -m "Update GitHub Contribution Snake [skip ci]" || echo "No changes to commit"
           git push origin main
-
-      # Passo 5: Publicar na branch 'output'
-      - name: Deploy to GitHub Pages (Output branch)
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
